tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__FirstHalfofLFTRB-AAAAAAAAAAAAAAAAAAAMWA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3160,
  "optional_prerequisites": [
    3176,
    3146
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "The LFTR processing chain has two halves, with the first being in mid-late IV and the second requiring the Assembly Line and more materials to finish. Aside from power, both of these halves have special outputs that can be helpful for progression, but the second half is most likely the one that holds the most value. Regardless, the full processing chain around the reactor and its fuel will keep outputting everything, so it's worth it to look at what it gives.\n\nLet's start with the LFTR Fuel 1 outputs, after the fuel is consumed in the reactor. U233 and UF6 are both used to make more fuel. U233 will be used until you have Sparge Towers to improve your fuel production, while UF6 is a part of the good fuel recipe that you always want to use. T Salt is processed in the Reactor Processing Unit to yield Proactinium, which decays into even more U233, and then in the Cold Trap to yield more U233 and UF6.\n\nRemember: U233 is the early source of fuel, UF6 is the one you will switch to as you progress.\n\nMeanwhile, U Salt also processes into more fuel, but with a bonus of automated Phosphorous Dust. Unfortunately, you won't get a lot of it, but it is still a breeding output from the nuclear fission and is needed for GT++ alloys and other purposes.\n\nTB Salt is very similar to T Salt, but with higher amounts of the same output and also Beryllium Fluoride, whose output grows into more than what you used when you reach the later parts of the chain. Free Beryllium!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "First Half of LFTR Breeding",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
