tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__FirstStepsinRepr-AAAAAAAAAAAAAAAAAAAMag==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3178,
  "prerequisites": [
    3177
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You now have 4 different fluid outputs running away from your LFTR. Each of them needs specific attention, and all of them are useful.\n\nWhere to start looking? The best way to start is at the end, which is to say, the Fuel Refinery. You want to upgrade to the better fuels as soon as possible, and each one has 2 recipes: one with 4 inputs, similar to the recipe you've already done, and one with 2 inputs, focusing on LFTR Fuel Base. The 2-input recipes produce 10x the fuel, so they're much better, but you can't use this recipe alone. The Fuel Base can only be made from reprocessing depleted fuel, and you don't get enough of it to make the same amount of fuel spent. If you perfectly reprocess any of the first two fuels to get Fuel Base, you will come out short and run out of fuel.\n\nGiven that, your strategy will be to use two Fuel Refineries, one for each Fuel 2 recipe, and then change them to Fuel 3 once you've built the Assembly Line, which is required to build the final multiblocks in this line. For Fuel 2, get as much Fuel Base as you can from this chain - EBF <- DT <- RPU <- LFTR and put it into one of the refineries, while using the second one to top off on the remaining fuel you need to keep the LFTR going. You can limit the UF4 on the second refinery to not make too much fuel there, or just turn it on and off, and use as much of the better recipe as possible. You will be able to use the better recipe 100% of the time, but only after building a Sparge Tower.\n\nAdditional details on the other outputs you can get from reprocessing can be found on the breeding side of this questline branch.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "First Steps in Reprocessing",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3177
  ],
  "rewards": [],
  "tasks": []
}
