tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__FluidNukes-AAAAAAAAAAAAAAAAAAAMUg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3154,
  "prerequisites": [
    3148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Eventually, the previous nukes will not be big enough. You can make more of them, to get more power, but it's clear that you need something bigger. Bigger, literally. The next step in nuclear fission starts with a bigger multiblock, built on top of the original nuke. By surrounding it with a 5x5x5 cube of Reactor Pressure Vessels, it will become a different type of multiblock, the fluid nuke.\n\nAfter doing this, there's no direct EU generation anymore. The main output of a working fluid nuke is Hot Coolant, a fluid that can be turned into Steam or Superheated Steam in another multi, the Large Heat Exchanger (LHE). Steam means power, as you already know, so the obvious chain of processes here is a fluid nuke into an LHE, and then into Steam Turbines. These added steps are required to make EU from a nuke of this type (or, at least, they're the most popular way of doing it), but this work is rewarded by the final EU/t output of the setup, which is much larger than a regular nuke's output with the same amount of fuel.\n\nThe difference exists because regular nukes actually have a 50% penalty to EU/t. It's such a big step-up that, in reality, one fluid nuke is enough for IV power, if it's powerful enough. The one in this quest, though, is not that one, because fluid nukes in general have some additional complications that will be harder to deal with it. In fact, for this, you have the option to use Thorium as fuel and still get a good amount of power! What you will need are the fluid nuke blocks, but there is an optional task for this setup that only needs some blocks from the setup.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fluid Nukes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3148
  ],
  "rewards": [],
  "tasks": []
}
