tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__FurtherIC2NukePo-AAAAAAAAAAAAAAAAAAAMYg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3170,
  "prerequisites": [
    3167
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An observant nuclear scientist might have seen many more options for IC2 nukes than those mentioned in the quests up to this point. Thorium, Uranium, Thorium, Uranium... what about all of these other things, what do they do?\n\nUnfortunately, this is where the copying of builds ends. The nuke research that has been done is almost all about the fuel rods that existed from base IC2, namely the Thorium, Uranium and MOX ones. Almost all the others were added with GTNH, and they are more or less ignored by most players. However, not all of them are useless! To see why, keep reading.\n\nGoodGenerators has added two new pairs of Uranium and Plutonium rods: High Density, and Excited. Both of these use a lot more of the element per rod, to the extent where you'll need stacks and stacks of each to run a single nuke, which means that these are fuels for later in progression, when you have stockpiled a lot of U238. The main difference is that High Density rods output a lot more EU/t with the same heat output, whereas the Excited rods do output a lot more heat than usual. This means that the former are good for vacuum nukes, while the latter are good for fluid nukes. This is true because vac nukes want more EU/t from rods with less heat, to make the coolant cells last longer, while fluid nukes produce Hot Coolant directly from the amount of heat dissipated into the reactor. The Plutonium versions also have MOX-like behavior, while the Uranium ones don't.\n\nThis is not the end of high-powered nukes, though. There is a special, one-of-a-kind fuel rod called The Core, and there is a single vac nuke setup in the wiki using these things that outputs 7.906.206 EU/t, or about 3 amps of UHV. A truly ridiculous number, matching the truly ridiculous cost of making the fuel itself. This is a setup for a time in which you shouldn't be using IC2 nukes anymore, a true challenge for the mad nuclear scientist.\n\nWhat else is there? Unfortunately, not much. Every other fuel rod is largely useless. Tiberium rods can breed Zirconium and Xenon, if you need them, Lithium breeds Tritium and the Naquadah rods are unbelievably bad at generating power, which many other better reactors to use the Naquadah in. In terms of power, nothing else is worth using.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Further IC2 Nuke Potential",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3167
  ],
  "rewards": [],
  "tasks": []
}
