tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__FusingAmericiuma-AAAAAAAAAAAAAAAAAAAMdQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3189,
  "prerequisites": [
    3164
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A t2 Fusion Reactor unlocks more fusion materials, some of which will again be necessary to progress into the next tiers. One of them is Americium, which is the reason for all the Lutetium worry until now: both are required, because one makes the other. The recipe also needs Chrome as input, but that should be much easier to get than Lutetium or the power needed per bucket of Molten Americium, which is almost 300M EU.\n\nYou will need many stacks of this material for your future progression, but your first goal should be to make 141 ingots (check the ZPM \"Making Americium\" quest for details). However, if you have extra Lutetium, you should make more Americium, you will not regret doing this when you need more of it later.\n\nAnother useful material you unlock at t2 is Tritanium, which is different from Trinium. The source of this material is fusion, and the inputs to make it are Duranium and Titanium. If you haven't made Duranium before, you'll see that it needs a lot of Radon, almost 8x the amount of Tritanium you end up with. For this, you should already have the Radon loop automated, that step is very important for this.\n\nYou will need Tritanium to progress, just as you need Americium, so it's a good idea to batch craft both of these in your new t2 Fusion Reactor so you don't have to go back to these recipes soon.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fusing Americium and Tritanium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3164
  ],
  "rewards": [],
  "tasks": []
}
