tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__FusionEuropium-AAAAAAAAAAAAAAAAAAAMWg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3162,
  "prerequisites": [
    3153
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are chemical elements that are very important as building materials for high-tier machines. Unfortunately, some of these elements are very hard to find naturally, if at all, and need to be created by hand. They're not alloys, not a mix of materials, but they can be a mix of atoms...\n\nEuropium is the first wall that can be solved by fusion, and only by fusion. It is possible to find it in ores, but even the most complicated magic rituals to get them need some Europium to start, which leaves fusion crafting as the most reliable option to automate the entire process. It is a slow craft, but not an expensive one provided you already have the reactor built, since it uses cheap materials as inputs: Hydrogen and Neodymium. Both of these were used extensively for progression, so you should not have any trouble grabbing several hundreds of each to start this reaction.\n\nIt is important that you gather a lot of inputs. Each time the Fusion Reactor changes recipe, it has a start-up period where it needs a large amount of energy to begin crafting. In the case of Europium, you'll need 150 million EU to start crafting it, and then 7,077,888 EU per ingot of Europium crafted. This does not come out as plasma, so you can't get energy back from it! Additionally, each ingot takes 14.4 seconds to craft, so you can come out with a few stacks of Europium relatively quickly. During this time, you cannot produce plasma for power, so it's a good idea to have a good amount of EU stored, or other powergen setups working in the background, while you craft this material.\n\nWith Europium, you can craft a new kind of boule, wafers and many other things! Check NEI to see what you have unlocked.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fusion Europium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3153
  ],
  "rewards": [],
  "tasks": []
}
